# awesome-music-player

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  release.yml  test.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: disk.rs  folders.rs  library.rs  mod.rs  playlists.rs  playlists_temp.rs
src/components/AvatarSelector/: AvatarSelector.tsx
src/components/Cards/: ArtistCard.tsx  MediaCard.test.tsx  MediaCard.tsx  PlaylistCover.tsx  TrackCover.tsx
src/components/ContextMenu/: ContextMenu.tsx  TrackMenu.tsx
src/components/FlagIcon/: FlagIcon.tsx
src/components/Header/: DragRegion.tsx  Header.tsx  WindowControls.tsx
src/components/Layout/: Layout.tsx
src/components/Modals/: AddToPlaylistModal.tsx  CoverSearchModal.tsx
src/components/Notification/: Notification.tsx
src/components/Onboarding/: Onboarding.tsx
src/components/Player/: NowPlaying.tsx  PlayerBar.tsx  PlayingQueue.tsx
src/components/Sidebar/: MobileMenu.tsx  Sidebar.tsx
src/contexts/: AudioContext.tsx  LibraryContext.tsx  NotificationContext.tsx  SettingsContext.tsx
src/hooks/: useWindowControls.ts
src/i18n/: index.ts
src/i18n/locales/: de.ts  (+7 more)
src/styles/: theme.css
src/utils/: audioUtils.test.ts  audioUtils.ts  env.ts  formatTime.test.ts  formatTime.ts
(+21 files in other folders)
